[package]
name = "thinkphp-dash"
version = "0.1.0"
authors = ["bison <bison@bitseed.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
actix-web = { git = "https://gitee.com/bison-fork/actix-web" }

[dependencies.clap]
version = "3.0.0-beta.1"
default-features = false
features = [ "std", "suggestions", "color", "yaml" ]
